Fix line break of long answers in content-carousel & make inactive tabs more visible"

--- a/src/app/components/participant/content-choice-participant/content-choice-participant.component.scss
+++ b/src/app/components/participant/content-choice-participant/content-choice-participant.component.scss
@@ -67,40 +67,3 @@ p {
   transition: 0.6s;
   transform: scale(1);
 }
-
-
-::ng-deep .mat-radio-outer-circle {
-  .mat-radio-checked & {
-    border-color: var(--secondary)!important;
-  }
-  border-color: var(--on-surface)!important;
-}
-
-::ng-deep .mat-radio-inner-circle {
-  background-color: var(--secondary)!important;
-}
-
-::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,
-          .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
-  background-color: var(--secondary);
-}
-
-.mat-checkbox {
-  color: var(--on-surface)!important;
-}
-
-::ng-deep .mat-checkbox-frame {
-  border-color: var(--on-surface);
-}
-
-::ng-deep .mat-radio-ripple .mat-ripple-element {
-  background-color: var(--secondary);
-}
-
-::ng-deep .mat-radio-label-content {
-  color: var(--on-surface)!important;
-}
-
-::ng-deep .mat-checkbox-label {
-  color: var(--on-surface)!important;
-}
